FixManager: fix broken UI on 1.5.5

--- a/src/fixmanager/styles.less
+++ b/src/fixmanager/styles.less
@@ -19,7 +19,6 @@
         // Can't redo the whole menu, use pixel fuckery
         width: calc(280px * var(--ui-scale));
         grid-row: 2 / 3;
-        grid-column: 2 / 3;
         display: flex;
         gap: 0.5em;
     }
